TEST_PROGRAMS/INVALID/04/78.go
package main

func main() {
    var a, b = 2

    // Illegal number of operands
    a = a, b
}
